--- a/style.css
+++ b/style.css
@@ -1,30 +1,50 @@
 body {
     background-color: rgb(255, 200, 209);
-    background-image: url("https://img.freepik.com/vetores-gratis/vetor-de-fundo-decorativo-com-textura-aquarela-rosa-suave_1055-10739.jpg?w=2000");
-  }
+    background-image: url("https://img.elo7.com.br/product/zoom/29CF936/tecido-rosa-bebe-liso-conjunto-unicornio-45-x-90-cm-un05-tecido-para-patchwork.jpg");
+     }
   
-  h1 {
+h1 {
     color: rgb(161, 51, 86);
-    background-color: rgb(241, 213, 218);
+    background-color: rgb(255, 165, 182);
     border: 2px solid aliceblue;
-  }
-
-  /*CLASS*/
-  .center{
+    text-shadow: 1px 1px 2px black, 0 0 25px rgb(150, 66, 80), 0 0 5px rgb(18, 8, 10);
+   
+   }
+ 
+/*CLASS*/
+    .center{
     text-align: center;
-  }
+    }
 
-  .fonte-verde {
-    color:darkorchid;
+    .fonte-verde {
+    color:rgb(158, 57, 209);
     border-style: solid;
     margin-right: 40px;
     margin-left: 40px;
-  }
+    }
 
   /*ID*/
-  #para {
-    font-family: verdana;
-    font-size: 20px;
-  }
+    #para {
+    font-family: 'Edu NSW ACT Foundation';
+    font-size: 30px;
+   }
 
+    .link {
+    text-align: center;
+    font-size: 30px;
+    text-transform: lowercase;
+  
+   }
 
+    .link a {
+    text-decoration: none;
+    color:rgb(244, 25, 87);
+    text-shadow: 2px 2px 5px black;
+   }
+
+    p {
+    border: 2px solid rgb(0, 0, 0);
+    outline: rgb(237, 177, 196) solid 10px; 
+    padding: 20px;
+    text-align: center;
+   }
